tests/regression/errors/basic/import_error_9.csd
// Import error test 9
yeet "nonexistent_module_9"
sus result drip = some_function(9)
